--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="Content-Security-Policy" content="<%= htmlWebpackPlugin.options.contentSecurityPolicy %>">
   <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
